tests/cases/compiler/ClassDeclaration8/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.7.3/tests/cases/compiler/ClassDeclaration8.ts`, Apache-2.0 License

class C {
  constructor(); //~ ERROR: Constructor implementation is missing.
}